<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cars.DetailCarActivity">

    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/comercial_car" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_image"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/detail_model"
            style="@style/labelDetailCar"
            android:text="@string/model_car" />

        <TextView
            android:id="@+id/detail_price"
            style="@style/labelDetailCar"
            android:text="@string/price_car" />

        <TextView
            android:id="@+id/detail_seats"
            style="@style/labelDetailCar"
            android:text="@string/hint_seats" />

        <TextView
            android:id="@+id/detail_date_released"
            style="@style/labelDetailCar"
            android:text="@string/hint_date" />

        <TextView
            android:id="@+id/detail_category"
            style="@style/labelDetailCar"
            android:text="@string/car_category" />

        <TextView
            android:id="@+id/detail_state"
            style="@style/labelDetailCar"
            android:text="@string/status_car" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/detail_image"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

</androidx.constraintlayout.widget.ConstraintLayout>