<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_et_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_model"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_et_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_price"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_et_seats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_seats"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Label date -->
            <TextView
                android:id="@+id/fecha_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/hint_date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorGray" />

            <!-- Date Released -->
            <TextView
                android:id="@+id/car_tv_date_released"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_md_margin"
                android:text="@string/car_date_format"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <!-- Label State -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/label_state"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorGray" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_md_margin"
                android:orientation="horizontal"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/car_rb_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:buttonTint="@color/colorPrimary"
                    android:paddingStart="@dimen/activity_md_margin"
                    android:text="@string/radio_car_new" />

                <RadioButton
                    android:id="@+id/car_rb_used"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:buttonTint="@color/colorPrimary"
                    android:paddingStart="@dimen/activity_md_margin"
                    android:text="@string/radio_car_used" />

            </RadioGroup>

            <!-- Label Category -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/label_category"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorGray" />

            <Spinner
                android:id="@+id/sp_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_md_margin" />

            <!-- Battery - Electric -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cont_electric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_battery_capacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_battery_cap"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--  Space Capacity - Comercial  -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cont_comercial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_space_capacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_space_cap"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Max Payload - Truck -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cont_truck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_max_payload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_max_payload"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_save_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:onClick="handleClickSave"
        android:paddingVertical="10dp"
        android:text="@string/btn_save_car"
        android:theme="@style/RaisedButtonDefault" />

</RelativeLayout>